add internal bind code
